Bugfix for scores not showing up when game card initially loads. Also add some padding to game cards.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,3 +4,7 @@
   border: none;
   color: white;
 }
+
+button::hover {
+  cursor: pointer;
+}
